--- a/pub/wefound.yaml
+++ b/pub/wefound.yaml
@@ -6,279 +6,6 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇩🇪_DE_德国
-    type: trojan
-    server: 3.120.242.243
-    port: 22222
-    udp: true
-    password: telegram-id-privatevpns
-    sni: trj.rollingnext.co.uk
-    skip-cert-verify: true
-    network: tcp
-  - &id002
-    name: 🇬🇧_GB_英国_1
-    type: trojan
-    server: 3.10.157.89
-    port: 22222
-    udp: true
-    password: telegram-id-directvpn
-    sni: trj.rollingnext.co.uk
-    skip-cert-verify: true
-    network: tcp
-  - &id003
-    name: 🇫🇷_FR_法国
-    type: trojan
-    server: 13.37.210.5
-    port: 22222
-    udp: true
-    password: telegram-id-privatevpns
-    sni: trj.rollingnext.co.uk
-    skip-cert-verify: true
-    network: tcp
-  - &id004
-    name: 🇺🇸_US_美国_1
-    type: vmess
-    server: sbl3.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: 10ea3b2a-b615-45f1-b1b7-c62bafe8c80c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: sbl3.shabijichang.com
-  - &id005
-    name: 🇬🇧_GB_英国_2
-    type: trojan
-    server: 52.56.67.143
-    port: 22222
-    udp: true
-    password: telegram-id-directvpn
-    sni: trj.rollingnext.co.uk
-    skip-cert-verify: true
-    network: tcp
-  - &id006
-    name: 🇺🇸_US_美国_2
-    type: vmess
-    server: wnd2.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: wnd2.shabijichang.com
-  - &id007
-    name: 🇺🇸_US_美国_3
-    type: vmess
-    server: brcf.duaaoped.xyz
-    port: 8443
-    cipher: auto
-    uuid: 865897ad-8d07-4021-b7c3-d8eb4a29ee8d
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /xtsmol
-  - &id008
-    name: 🇺🇸_US_美国_4
-    type: vmess
-    server: 104.21.40.162
-    port: 443
-    cipher: auto
-    uuid: d196ccc9-db42-475d-a7e4-7c27a6a326d1
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vmess
-      headers:
-        host: be1.xv2ray.net
-  - &id009
-    name: 🇺🇸_US_美国_5
-    type: vmess
-    server: 104.24.208.25
-    port: 2053
-    cipher: auto
-    uuid: 72f76c36-3e3c-45b3-a61f-d8f017345958
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: b5.iraniancp.click
-  - &id010
-    name: 🇺🇸_US_美国->🇫🇷_FR_法国
-    type: vmess
-    server: nomore.hideip.tk
-    port: 8443
-    cipher: auto
-    uuid: 874a60cd-f099-499a-8aee-e4606ccf3e86
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: nomore.hideip.tk
-  - &id011
-    name: 🇺🇸_US_美国->🇦🇪_AE_阿联酋_1
-    type: vmess
-    server: db5.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: db5.shabijichang.com
-  - &id012
-    name: 🇺🇸_US_美国_6
-    type: vmess
-    server: wnd3.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: 10ea3b2a-b615-45f1-b1b7-c62bafe8c80c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: wnd3.shabijichang.com
-  - &id013
-    name: 🇺🇸_US_美国_7
-    type: vmess
-    server: 104.17.27.2
-    port: 80
-    cipher: auto
-    uuid: 72d46152-ee0b-4610-efb1-ffb0f786b848
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: my2.gamedaylion.buzz
-  - &id014
-    name: 🇺🇸_US_美国->🇦🇪_AE_阿联酋_2
-    type: vmess
-    server: db4.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: db4.shabijichang.com
-  - &id015
-    name: 🇺🇸_US_美国->🇳🇱_NL_荷兰
-    type: vmess
-    server: 104.25.254.162
-    port: 2096
-    cipher: auto
-    uuid: 12009e57-6fd8-46d6-94af-539514a7e7c7
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: s1.shargh.shop
-  - &id016
-    name: 🇮🇪_IE_爱尔兰
-    type: trojan
-    server: 34.251.172.224
-    port: 22222
-    udp: true
-    password: telegram-id-directvpn
-    sni: trj.rollingnext.co.uk
-    skip-cert-verify: true
-    network: tcp
-  - &id017
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国_1
-    type: vmess
-    server: flkf2.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: flkf2.shabijichang.com
-  - &id018
-    name: 🇺🇸_US_美国->🇮🇳_IN_印度_1
-    type: vmess
-    server: hdlb3.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: 10ea3b2a-b615-45f1-b1b7-c62bafe8c80c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: hdlb3.shabijichang.com
-  - &id019
-    name: 🇺🇸_US_美国_8
-    type: vmess
-    server: 104.20.231.210
-    port: 80
-    cipher: auto
-    uuid: 72d46152-ee0b-4610-efb1-ffb0f786b848
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /?ed=2048
-      headers:
-        host: my.designlion.buzz
-  - &id020
-    name: 🇺🇸_US_美国->🇮🇳_IN_印度_2
-    type: vmess
-    server: 104.17.18.26
-    port: 80
-    cipher: auto
-    uuid: 5180444a-4756-43b4-960b-49eb9052e4e8
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: a.109420.xyz
-  - &id021
     name: 🇺🇸_US_美国->🇬🇧_GB_英国
     type: vmess
     server: mrb2.shabijichang.com
@@ -293,87 +20,62 @@ proxies:
       path: /
       headers:
         host: mrb2.shabijichang.com
-  - &id022
-    name: 🇺🇸_US_美国_9
-    type: vmess
-    server: fhc2.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: fhc2.shabijichang.com
-  - &id023
-    name: 🇺🇸_US_美国_10
-    type: vmess
-    server: jd2.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: 56278a1a-c7cc-459f-b00c-3037e4f99590
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: jd2.shabijichang.com
-  - &id024
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国_2
-    type: vmess
-    server: yd1.992688.xyz
-    port: 2052
-    cipher: auto
-    uuid: 6963920a-8bb3-4f87-b231-56ccb9f9b3a7
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: vceu3.vpn66.eu.org
-  - &id025
-    name: 🇬🇧_GB_英国_3
+  - &id002
+    name: 🇮🇪_IE_爱尔兰_1
     type: trojan
-    server: 13.43.227.116
+    server: 54.216.221.117
     port: 22222
     udp: true
     password: telegram-id-privatevpns
     sni: trj.rollingnext.co.uk
     skip-cert-verify: true
     network: tcp
-  - &id026
-    name: 🇬🇧_GB_英国_4
-    type: trojan
-    server: 18.132.185.20
-    port: 22222
-    udp: true
-    password: telegram-id-privatevpns
-    sni: trj.rollingnext.co.uk
-    skip-cert-verify: true
-    network: tcp
-  - &id027
-    name: 🇺🇸_US_美国_11
+  - &id003
+    name: 🇺🇸_US_美国->🇧🇷_BR_巴西_1
     type: vmess
-    server: asb2.shabijichang.com
-    port: 80
+    server: freeyx.cloudflare88.eu.org
+    port: 8080
     cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    uuid: 8a6fb1b7-d939-4030-a4da-1c0b2637c865
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /
+      path: /服务器4元月，节点2.5元月@natdcibot
       headers:
-        host: asb2.shabijichang.com
-  - &id028
+        host: jd2kuai5yuan.cloudflare88.eu.org
+  - &id004
+    name: 🇺🇸_US_美国->🇧🇷_BR_巴西_2
+    type: vmess
+    server: freeyx.cloudflare88.eu.org
+    port: 2095
+    cipher: auto
+    uuid: 8a6fb1b7-d939-4030-a4da-1c0b2637c865
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /服务器4元月，节点2.5元月@natdcibot
+      headers:
+        host: jd2kuai5yuan.cloudflare88.eu.org
+  - &id005
+    name: 🇺🇸_US_美国->🇧🇷_BR_巴西_3
+    type: vmess
+    server: freeyx.cloudflare88.eu.org
+    port: 8880
+    cipher: auto
+    uuid: 8a6fb1b7-d939-4030-a4da-1c0b2637c865
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /服务器4元月，节点2.5元月@natdcibot
+      headers:
+        host: jd2kuai5yuan.cloudflare88.eu.org
+  - &id006
     name: 🇺🇸_US_美国->🇸🇦_SA_沙特阿拉伯
     type: vmess
     server: jd3.shabijichang.com
@@ -388,10 +90,96 @@ proxies:
       path: /
       headers:
         host: jd3.shabijichang.com
-  - &id029
-    name: 🇺🇸_US_美国->🇮🇳_IN_印度_3
+  - &id007
+    name: 🇩🇪_DE_德国
+    type: trojan
+    server: 5.104.107.143
+    port: 443
+    udp: true
+    password: 3ed4d5f3-68e9-42fc-978a-22afc2523e5a
+    sni: de1.xn--mes358a9urctx.com
+    skip-cert-verify: true
+    network: tcp
+  - &id008
+    name: 🇺🇸_US_美国->🇧🇷_BR_巴西_4
     type: vmess
-    server: mm3.shabijichang.com
+    server: freeyx.cloudflare88.eu.org
+    port: 2052
+    cipher: auto
+    uuid: 8a6fb1b7-d939-4030-a4da-1c0b2637c865
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /服务器4元月，节点2.5元月@natdcibot
+      headers:
+        host: jd2kuai5yuan.cloudflare88.eu.org
+  - &id009
+    name: 🇨🇳_CN_中国->🇦🇹_AT_奥地利
+    type: trojan
+    server: other.kunlun-ppg.com
+    port: 10848
+    udp: true
+    password: 9daf849c-6310-4fa4-9855-65049737216b
+    sni: alibaba-node.cn
+    skip-cert-verify: true
+    network: tcp
+  - &id010
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国
+    type: vmess
+    server: shenzhoul.nices.pro
+    port: 37539
+    cipher: auto
+    uuid: 865897ad-8d07-4021-b7c3-d8eb4a29ee8d
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /xtsmol
+      headers:
+        host: shenzhoul.nices.pro
+  - &id011
+    name: 🇮🇪_IE_爱尔兰_2
+    type: trojan
+    server: 52.215.170.185
+    port: 22222
+    udp: true
+    password: telegram-id-directvpn
+    sni: trj.rollingnext.co.uk
+    skip-cert-verify: true
+    network: tcp
+  - &id012
+    name: 🇺🇸_US_美国->🇧🇷_BR_巴西_5
+    type: vmess
+    server: freeyx.cloudflare88.eu.org
+    port: 2086
+    cipher: auto
+    uuid: 8a6fb1b7-d939-4030-a4da-1c0b2637c865
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /服务器4元月，节点2.5元月@natdcibot
+      headers:
+        host: jd2kuai5yuan.cloudflare88.eu.org
+  - &id013
+    name: 🇺🇸_US_美国_1
+    type: vmess
+    server: 195.123.240.170
+    port: 41916
+    cipher: auto
+    uuid: 12772df9-485f-413c-edbf-3f562d61de4e
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id014
+    name: 🇺🇸_US_美国_2
+    type: vmess
+    server: 104.21.75.246
     port: 80
     cipher: auto
     uuid: c458695d-6908-45c3-9512-e0c46418454c
@@ -402,22 +190,97 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: mm3.shabijichang.com
-  - &id030
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国_3
+        host: sbl2.shabijichang.com
+  - &id015
+    name: 🇺🇸_US_美国_3
     type: vmess
-    server: 172.67.187.109
+    server: 172.67.184.13
     port: 80
     cipher: auto
-    uuid: 2e87cebc-977b-4fec-b079-b1ddc55b19c8
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /vmess
+      path: /
       headers:
-        host: ee1.xv2ray.net
+        host: sbl2.shabijichang.com
+  - &id016
+    name: 🇺🇸_US_美国->🇧🇷_BR_巴西_6
+    type: vmess
+    server: freeyx.cloudflare88.eu.org
+    port: 2082
+    cipher: auto
+    uuid: 8a6fb1b7-d939-4030-a4da-1c0b2637c865
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /服务器4元月，节点2.5元月@natdcibot
+      headers:
+        host: jd2kuai5yuan.cloudflare88.eu.org
+  - &id017
+    name: 🇺🇸_US_美国->🇳🇱_NL_荷兰
+    type: vmess
+    server: 104.24.184.65
+    port: 2096
+    cipher: auto
+    uuid: ddde9cc7-00b1-4637-ce42-ccf7ceb0d612
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: s1.shargh.shop
+  - &id018
+    name: 🇺🇸_US_美国_4
+    type: vmess
+    server: ns1.v2-vip.fun
+    port: 8080
+    cipher: auto
+    uuid: d3f830a2-205a-4bba-a7ca-5e87899ac04d
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /api/v3/download.getFile
+      headers:
+        host: ssrsub.v002.ssrsub.com
+  - &id019
+    name: 🇺🇸_US_美国_5
+    type: vmess
+    server: 172.67.229.17
+    port: 8080
+    cipher: auto
+    uuid: d3f830a2-205a-4bba-a7ca-5e87899ac04d
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /api/v3/download.getFile
+      headers:
+        host: ssrsub.v002.ssrsub.com
+  - &id020
+    name: 🇺🇸_US_美国->🇧🇷_BR_巴西_7
+    type: vmess
+    server: freeyx.cloudflare88.eu.org
+    port: 80
+    cipher: auto
+    uuid: 8a6fb1b7-d939-4030-a4da-1c0b2637c865
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /服务器4元月，节点2.5元月@natdcibot
+      headers:
+        host: jd2kuai5yuan.cloudflare88.eu.org
 proxy-groups:
   - name: PROXY
     type: select
@@ -464,16 +327,6 @@ proxy-groups:
       - *id018
       - *id019
       - *id020
-      - *id021
-      - *id022
-      - *id023
-      - *id024
-      - *id025
-      - *id026
-      - *id027
-      - *id028
-      - *id029
-      - *id030
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -499,16 +352,6 @@ proxy-groups:
       - *id018
       - *id019
       - *id020
-      - *id021
-      - *id022
-      - *id023
-      - *id024
-      - *id025
-      - *id026
-      - *id027
-      - *id028
-      - *id029
-      - *id030
   - name: SELECT
     type: select
     proxies:
@@ -532,16 +375,6 @@ proxy-groups:
       - *id018
       - *id019
       - *id020
-      - *id021
-      - *id022
-      - *id023
-      - *id024
-      - *id025
-      - *id026
-      - *id027
-      - *id028
-      - *id029
-      - *id030
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
