--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-requests
+requests~=2.31.0
 bs4==0.0.1
-beautifulsoup4
-pyquery==1.4.0
-ruamel.yaml==0.16.13
-GitPython==3.1.37
-Telethon
+beautifulsoup4~=4.12.2
+pyquery==2.0.0
+ruamel.yaml==0.17.40
+GitPython==3.1.40
+Telethon==1.31.1
+peewee==3.17.0
