--- a/.github/workflows/download_chichi_image.yaml
+++ b/.github/workflows/download_chichi_image.yaml
@@ -22,7 +22,7 @@ jobs:
           pip install -r requirements.txt
       - name: 下载图片
         run: |
-        working-directory: ./chichi
+        working-directory: chichi
           python3 get_root_urls.py
       - name: 压缩图片目录
         run: zip -r chichi.zip ./images
