--- a/.github/workflows/download_chichi_image.yaml
+++ b/.github/workflows/download_chichi_image.yaml
@@ -22,8 +22,7 @@ jobs:
           pip install -r requirements.txt
       - name: 下载图片
         run: |
-          cd chichi
-          python3 get_root_urls.py
+          python3 chichi/get_root_urls.py
       - name: 压缩图片目录
         run: zip -r chichi.zip ./images
       - name: 上传构建工件
