--- a/.github/workflows/download_chichi_image.yaml
+++ b/.github/workflows/download_chichi_image.yaml
@@ -9,6 +9,8 @@ permissions:
   contents: write
 jobs:
   get_v2ray:
+    env:
+      PYTHONPATH: chichi
     runs-on: ubuntu-latest
     steps:
       - name: 检出代码
@@ -22,7 +24,7 @@ jobs:
           pip install -r requirements.txt
       - name: 下载图片
         run: |
-          python3 chichi/get_root_urls.py
+          python3 get_root_urls.py
       - name: 压缩图片目录
         run: zip -r chichi.zip ./images
       - name: 上传构建工件
