--- a/.github/workflows/download_chichi_image.yaml
+++ b/.github/workflows/download_chichi_image.yaml
@@ -25,7 +25,7 @@ jobs:
           cd chichi
           python3 get_root_urls.py
       - name: 压缩图片目录
-        run: zip -r chichi.zip ./images
+        run: zip -r chichi.zip ./chichi/images
       - name: 上传构建工件
         uses: actions/upload-artifact@v2
         with:
